--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
-    "mongoose": "^8.2.4"
+    "mongoose": "^8.2.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
