--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.13.2",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
