--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,10 @@
     "axios": "^1.13.2",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-slick": "^0.30.2",
