--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
+    "swiper": "^12.0.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
