--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
 		"express": "^5.1.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.19.3",
+		"razorpay": "^2.9.6",
 		"validator": "^13.15.20"
 	},
 	"devDependencies": {
