--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,15 +2,17 @@
 	"version": 2,
 	"builds": [
 		{
-			"src": "app.js",
+			"src": "src/index.js",
 			"use": "@vercel/node",
-			"config": { "includeFiles": ["dist/**"] }
+			"config": {
+				"includeFiles": ["dist/**"]
+			}
 		}
 	],
 	"routes": [
 		{
 			"src": "/(.*)",
-			"dest": "app.js"
+			"dest": "src/index.js"
 		}
 	]
 }
