--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
+    "motion": "^12.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
